--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/RomarioSuperGod/My-project#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "masonry-layout": "^4.1.1"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
