--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/RomarioSuperGod/My-project#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "bxslider": "^4.2.11",
+    "flickity": "^2.0.5",
     "jquery": "^3.1.1",
     "masonry-layout": "^4.1.1"
   },
