--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bxslider": "^4.2.11",
     "flickity": "^2.0.5",
     "jquery": "^3.1.1",
-    "masonry-layout": "^4.1.1"
+    "jquery-validation": "^1.16.0",
+    "masonry-layout": "^4.1.1",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
