--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bxslider": "^4.2.11",
+    "datatables.net": "^1.10.13",
+    "datatables.net-dt": "^1.10.13",
     "flickity": "^2.0.5",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.16.0",
