--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flickity": "^2.0.5",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.16.0",
+    "jquery.mmenu": "^5.7.8",
     "masonry-layout": "^4.1.1",
     "toastr": "^2.1.2"
   },
